--- a/style.css
+++ b/style.css
@@ -119,18 +119,12 @@ body {
   /* background-color: #370505; */
   font-size: 3vw;
   font-weight: bold;
-  background-image: linear-gradient(
-    45deg,
-    hsl(240deg 100% 20%) 0%,
-    hsl(289deg 100% 21%) 22%,
-    hsl(315deg 100% 27%) 39%,
-    hsl(329deg 100% 36%) 52%,
-    hsl(337deg 100% 43%) 62%,
-    hsl(357deg 91% 59%) 70%,
-    hsl(17deg 100% 59%) 77%,
-    hsl(34deg 100% 53%) 84%,
-    hsl(45deg 100% 50%) 91%,
-    hsl(55deg 100% 50%) 100%
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 0, 1) 0%,
+    rgba(0, 188, 212, 1) 25%,
+    rgba(139, 192, 74, 1) 63%,
+    rgba(238, 130, 163, 0.96) 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -350,5 +344,11 @@ body {
   }
   50% {
     filter: drop-shadow(5px -3px 3px #02382d) hue-rotate(180deg);
+  }
+}
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  [class*="col-"] {
+    width: 100%;
   }
 }
